a libbte bit adjustment

--- a/purchase.html
+++ b/purchase.html
@@ -41,7 +41,7 @@
                 </label>
 
                 <label class="price-label">
-                    <button>Calculate</button>
+                    <button>Calculate</button>                
                     Total Price:
                     <input type="text">            
                 </label>
@@ -70,7 +70,7 @@
                 <textarea></textarea>
 
             </form>
-            <button class="purchase">Purchase</button>
+            <button onclick="alert('Thank you for the purchase!')" class="purchase">Purchase</button>
         </div>
 
 
