testing changing code and git pull

--- a/purchase.html
+++ b/purchase.html
@@ -17,7 +17,7 @@
 
         <div class="container">
             <div class="item-image">
-                    <img src="/E-commerce/picture/car_fragrance.webp" alt="car fragrance">
+                    <img src="/picture/car_fragrance.webp" alt="car fragrance">
                 </div>
             <div class="pick-item">
                 
